--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,6 +33,11 @@
         <div  class="col-md-8"><%= f.password_field :password, class: "form-control" %></div>
       </div>
 
+      <div class="orm-group row">
+        <%= label_tag :city_id, "Ta ville:", class: "col-md-4 control-label" %>
+        <div  class="col-md-8"><%= select_tag :city_id, options_from_collection_for_select(City.all, :id, :name), class: "form-control"  %></div>
+      </div>
+
       <div class="form-group row mt-3">
         <div class="col-md-8 col-md-offset-4">
           <button type="submit" class="btn btn-primary">S'inscrire</button>
